[tool.poetry]
name = "mlflow-tracking-server"
version = "0.1.0"
description = "mlflow-tracking-server"
authors = ["Rahul Mahajan,rahulsm.27@gmail.com"]
repository = "" 
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
mlflow = "~=2.5.0"
psycopg2-binary = "~=2.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
